# Haskell-Euler-Project

./: CHANGELOG.md  Euler-project.cabal  README.md
app/: Main.hs  Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.5/: Euler-project-0.1.0.0-inplace.conf  package.cache
src/: Eulerproject.hs
test/: Test-Main.hs
