cabal-version:      2.4
name:               Euler-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pranshi
maintainer:         pranshi@hasura.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Euler-project
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:    Problem01, Problem02, Problem03, Problem04, Problem05

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0, containers, primes
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-euler
    type:       exitcode-stdio-1.0
    main-is:    Test-Main.hs
    build-depends:  base, primes, HUnit
    hs-source-dirs: test, app
    default-language:   Haskell2010
    other-modules: Problem01, Problem02, Problem03, Problem04, Problem05